<resources>
    <string name="app_name">MadingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t have Account?</string>
    <string name="MadingApp">MadingApp</string>
    <string name="madingapp">MadingApp</string>
    <string name="sign_up">Sign Up</string>
    <string name="edit">Edit</string>
    <string name="sign_out">Sign Out</string>
    <string name="hot_topics">Hot Topics</string>
    <string name="title_activity_home_factivity">HomeFActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fname">fname</string>
    <string name="lname">lname</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="date">Date Of Birth</string>
    <string name="create">Create</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="mading">Mading</string>
    <string name="Author">Author</string>
    <string name="created_date">created_date</string>
    <string name="title">Title</string>
    <string name="add_comment">Add Comment ...</string>
    <string name="comment">Comment</string>
    <string name="description">Description</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
</resources>