<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/background_login2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName_Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:maxLength="20"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/fname_SignUp"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="@drawable/background_edittext_fname"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:hint="@string/first_name"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/lname_SignUp"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:background="@drawable/background_editext_lname"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/username_Signup"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_login"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/password_SignUp"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_login"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/confirmpassword_SignUp"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_login"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/gender_SignUp"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_spinner_signup"
            android:gravity="center"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/date_SignUp"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_login"
            android:focusable="false"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:hint="Date"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLogin_Login"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:background="@drawable/background_button_login"
            android:fontFamily="@font/allerta"
            android:text="@string/create"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvSignIn_SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:fontFamily="serif"
            android:text="@string/sign_in"
            android:textColor="#0027FF" />
    </LinearLayout>
</LinearLayout>