<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/background_home"
        android:gravity="center"
        android:orientation="horizontal">

        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:fontFamily="serif"-->
        <!--            android:text="Change Password"-->
        <!--            android:textColor="@color/black"-->
        <!--            android:textSize="30sp" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:maxLength="20"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtOldPassword_changepass"
            android:layout_width="315dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_button_changepassword"
            android:drawablePadding="5dp"
            android:elevation="3dp"
            android:hint="@string/old_password"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="#666BDA"
            android:textColorHint="#666BDA" />

        <EditText
            android:id="@+id/edtNewPassword_changepass"
            android:layout_width="315dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_button_changepassword"
            android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
            android:drawablePadding="5dp"
            android:elevation="3dp"
            android:hint="@string/new_password"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="#666BDA"
            android:textColorHint="#666BDA" />

        <EditText
            android:id="@+id/edtConfirmPassword_changepass"
            android:layout_width="315dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_button_changepassword"
            android:drawablePadding="5dp"
            android:elevation="3dp"
            android:hint="@string/confirm_password"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="#666BDA"
            android:textColorHint="#666BDA" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnConfirmation_changepass"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="@drawable/edittext_search_home"
                android:fontFamily="@font/allerta"
                android:text="@string/change"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btnCancel_changepass"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/edittext_search_home"
                android:fontFamily="@font/allerta"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="17sp" />


        </LinearLayout>


    </LinearLayout>


    <!--    <EditText-->

    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:fontFamily="serif"-->
    <!--        android:hint="Old Password"-->
    <!--        android:inputType="textPassword" />-->
    <!--    <EditText-->

    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:fontFamily="serif"-->
    <!--        android:hint="New Password"-->
    <!--        android:inputType="textPassword" />-->
    <!--    <EditText-->

    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:fontFamily="serif"-->
    <!--        android:hint="Confirmation Password"-->
    <!--        android:inputType="textPassword" />-->


    <!--    <Button-->
    <!--        -->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:fontFamily="serif"-->
    <!--        android:text="Confirmation" />-->


</LinearLayout>