<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.DetailMadingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/back_DetailMading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:background="#00000000"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:maxLength="20"
                android:text="@string/mading"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageAuthor_DetailMading"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/img_placeholder"
                app:civ_border_color="@color/white" />

            <TextView
                android:id="@+id/author_DetailMading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="85dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/allerta"
                android:text="@string/Author"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/createdDate_DetailMading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="85dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/allerta"
                android:text="@string/created_date"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/report_DetailMading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:background="@color/white"
                android:src="@drawable/ic_baseline_report_problem_24" />

            <ImageView
                android:id="@+id/imageView_listHome"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="0dp"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_placeholder" />

            <TextView
                android:id="@+id/title_DetailMading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="385dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/allerta"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescription_DetailMading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="415dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/allerta"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageButton
                android:id="@+id/like_DetailMading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:background="@color/white"
                android:src="@drawable/ic_baseline_thumb_up_24" />

            <TextView
                android:id="@+id/totlike_DetailMading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="57dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/dislike_DetailMading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="246dp"
                android:layout_toEndOf="@+id/like_DetailMading"
                android:background="@color/white"
                android:src="@drawable/ic_baseline_thumb_down_24" />

            <TextView
                android:id="@+id/totdislike_DetailMading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="138dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/bookmark_DetailMading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@color/white"
                android:src="@drawable/ic_baseline_bookmark_24" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageComment_DetailMading"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:src="@drawable/img_placeholder"
                app:civ_border_color="@color/white" />

            <EditText
                android:id="@+id/edtAddComment_DetailMading"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/background_addcomment_detailmading"
                android:hint="@string/add_comment"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_send_24" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvShowAllComment_DetailMading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:text="Show All Comment"
            android:textColor="@color/black" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>